// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TvReleaseDate renders correctly when show is ended 1`] = `
<Text
  numberOfLines={0}
  style={
    [
      {
        "color": "#181818",
        "fontSize": 17,
        "fontWeight": "600",
        "lineHeight": 22,
      },
      {
        "color": "#666666",
      },
    ]
  }
>
  01.01.2024
   – 
  27.02.2024
</Text>
`;

exports[`TvReleaseDate renders correctly when show is not ended 1`] = `
<Text
  numberOfLines={0}
  style={
    [
      {
        "color": "#181818",
        "fontSize": 17,
        "fontWeight": "600",
        "lineHeight": 22,
      },
      {
        "color": "#666666",
      },
    ]
  }
>
  15 December 2023
</Text>
`;
